--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,4 +13,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 EditorStartupMap=/Game/Levels/BuildingEscape.BuildingEscape
 GameDefaultMap=/Game/Levels/BuildingEscape.BuildingEscape
 bUseSplitscreen=True
+GlobalDefaultGameMode=/Game/Blueprints/BuildingEscapeGameModeBase_BP.BuildingEscapeGameModeBase_BP_C
 
